# paper_reviews

./: .env.cloubic.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
config/: agents.yaml
config/journals/: _template.yaml  ieee_access.yaml  ieee_access_accepted_profile.md  mdpi_applied_sciences.yaml  mdpi_electronics.yaml  mdpi_energies.yaml  mdpi_energies_accepted_profile.md
corpus/: DISTILLATION_REPORT.md  accept_rri_stats.json  energies_candidates.json  energies_download_list.md  energies_top20.json  ieee_access_p2_candidates.json  positives_eval_summary.json
memory/: project_status.md
research/: 00_技术路线总览与系统设计.md  01_survey_2501.10326_分析.md  02_AgentReview_2406.12708_分析.md  03_Researcher_repo_分析.md  04_最新研究与技术路线调研.md
scripts/: build_distillation.py  clean_corpus.py  distill_positives.py  extract_acceptance_profile.py  make_zh_mdpi_docx.py  run_deepseek_batch.sh  run_eval_remaining.sh  run_kedong_batch.sh  run_positives_eval.sh  run_review.py  text_sink.py
src/paper_reviews/: __init__.py  cloubic.py  config.py  ingest.py  llm_client.py  models.py  orchestrator.py  report.py  report_docx.py  scoring.py
src/paper_reviews/agents/: base.py  prompts.py  roles.py
wiki/: 2026-06-27_multi-agent-review-architecture.md  2026-06-28_rri-risk-scoring-and-hard-gate.md  README.md  _TEMPLATE.md
