[project]
name = "paper-reviews"
version = "0.1.0"
description = "Multi-agent system for journal-targeted scholarly paper review"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27", "pyyaml>=6.0"]

[project.optional-dependencies]
pdf = ["pypdf>=4.0", "reportlab>=4.0"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
